--- a/building-a-classifier.tex
+++ b/building-a-classifier.tex
@@ -10,11 +10,11 @@ Each index~$k\in\{1,2,\dots,N\}$ determines a splitting of the data sites into t
 $$
 X^{(k)}\coloneq X\setminus\{x_k\},\quad s\coloneq s_{X,f}\quad\mathbox{and}\quad s^{(k)}\coloneq s_{X\setminus\{x_k\},f}.
 $$
-If the function~$f$ that generated the given sampling~$f(X)$ is a well behaved function, then we should expect that, for each~$k$, the interpolant~$s^{(k)}$ predicts quite accurately the value~$f(x_k)$ at the point~$x_k$; instead, if $f$ is a discontinuous function, then there should be some indices~$k$ such that the prediction made by~$s^{(k)}$ for the point~$x_k$ is wrong.  Following the considerations of the previous section, we shall consider the quantity
+If the function~$f$ that generated the given sampling~$f(X)$ is a well behaved function, then we should expect that, for each~$k$, the interpolant~$s^{(k)}\!$ predicts quite accurately the value~$f(x_k)$ at the point~$x_k$; instead, if $f$ is a discontinuous function, then there should be some indices~$k$ such that the prediction made by~$s^{(k)}\!$ for the point~$x_k$ is wrong.  Following the considerations of the previous section, we shall consider the quantity
 $$
-U_k\coloneq\norm s_Φ^2-\norm{s^{(k)}}^2_Φ = {(f_k-s^{(k)}(x_k))^2\over P_{X^{(k)}}^2(x_k)},
+U_k\coloneq\norm s_Φ^2-\norm{s^{(k)}}^2_Φ = {(f_k-s^{(k)\!}(x_k))^2\over P_{X^{(k)\!}}^2(x_k)},
 $$
-which is small when the data~$(x_k, f(x_k))$ follows the model~$s$ which has been trained\fnote{Using the language of machine learning, in this case $(X^{(k)}, f(X^{(k)}))$ is the {\em training set}, while $(x_k, f(x_k))$ is the {\em test set}.} with~$(X^{(k)}, f(X^{(k)}))$,  and it is large otherwise.
+which is small when the data~$(x_k, f(x_k))$ follows the model~$s$ which has been trained\fnote{Using the language of machine learning, in this case $(X^{(k)\!}, f(X^{(k)\!\.}))$ is the {\em training set}, while $(x_k, f(x_k))$ is the {\em test set}.} with~$(X^{(k)}, f(X^{(k)}))$,  and it is large otherwise.
 
 It is of our interested to compute the vector
 $$
@@ -24,7 +24,7 @@ which collects together all the quantities~$U_k$ that have just been defined.  T
 $$
 \Bm E\coloneq (\range E_N/),
 $$
-whose elements are defined as~$E_k\coloneq f(x_k)-s^{(k)}(x_k)$, and which is typically used to find the appropriate shape parameter~$ε$ for the interpolation with  a positive definite radial function~$\phi_ε$. The value of~$ε$ is chosen such that the $p$-norm
+whose elements are defined as~$E_k\coloneq f(x_k)-s^{(k)\!}(x_k)$, and which is typically used to find the appropriate shape parameter~$ε$ for the interpolation with  a positive definite radial function~$\phi_ε$. The value of~$ε$ is chosen such that the $p$-norm
 $$
 \norm{\Bm E}_p\coloneq\cases{\bigl(\sum_{j=1}^N |x_j|^p\bigr)^{1/p}, &\quad if $p\geq1$\cr
   \max_{j\in\{1,2,\dots,N\}}|x_j|, &\quad if $p=\infty$}
@@ -41,7 +41,7 @@ $$
 \Bm f\coloneq (\range f_N/)^T = (f(x_1), f(x_2),\dots f(x_N))^T
 $$
 a vector of values sampled from any unknown function~$f\in\R^\Omega$.
-Then the elements~$E_k=f_k-s^{(k)}(x_k)$ of the cross-validation vector~$\Bm E$ can be alternatively computed as
+Then the elements~$E_k=f_k-s^{(k)\!}(x_k)$ of the cross-validation vector~$\Bm E$ can be alternatively computed as
 $$
 E_k = {α_k\over C_{k,k}},
 $$
@@ -51,16 +51,16 @@ For each point~$x\in\Omega$ let $\Bm t(x)$ be the evaluation at~$x$ of the vecto
 $$
 \Bm t(x)\coloneq (Φ(x,x_1), Φ(x,x_2), \dots, Φ(x, x_N))^T.
 $$
-Define then, for each~$k\in\{1,2,\dots, N\}$, the vectors $\Bm t^{(k)}\!(x)$ and~$\Bm f\,^{(k)}$ of length~$N-1$ by removing the $k$-th element from the vectors $\Bm t(x)$ and~$\Bm f$ respectively.  Similarly, define the matrix~$\Bm A^{(k)}$ of size~$(N-1)\times(N-1)$ by removing from~$\Bm A$ both its $k$-th~row and $k$-th~column.  If $\Bm β^{\lbrace k\rbrace}$ is the solution of the linear system~$\Bm A^{(k)}\Bm β^{\lbrace k\rbrace} = \Bm f\,^{(k)}$, then the function~$s^{(k)}\in \Cal S_{Φ,X^{(k)}}$ that interpolates~$f$ on the restricted set~$X^{(k)}$ of data sites can be expressed as
+Define then, for each~$k\in\{1,2,\dots, N\}$, the vectors $\Bm t^{(k)\!}(x)$ and~$\Bm f\,^{(k)\!}$ of length~$N-1$ by removing the $k$-th element from the vectors $\Bm t(x)$ and~$\Bm f$ respectively.  Similarly, define the matrix~$\Bm A^{(k)\!}$ of size~$(N-1)\times(N-1)$ by removing from~$\Bm A$ both its $k$-th~row and $k$-th~column.  If $\Bm β^{\lbrace k\rbrace\!}$ is the solution of the linear system~$\Bm A^{(k)}\Bm β^{\lbrace k\rbrace\!} = \Bm f\,^{(k)\!}$, then the function~$s^{(k)\!}\in \Cal S_{Φ,X^{(k)}}$ that interpolates~$f$ on the restricted set~$X^{(k)\!}$ of data sites can be expressed as
 $$
-s^{(k)}(x) = \Bm t^{(k)}\!(x)^T \Bm β^{\lbrace k\rbrace},\quad x\in\Omega.
+s^{(k)\!}(x) = \Bm t^{(k)\!}(x)^T \Bm β^{\lbrace k\rbrace},\quad x\in\Omega.
 $$
 
 If $\Bm C^{\.[k]}$ and~$\Bm I^{\.[k]}$ denote the $k$-th columns of the matrices $\Bm C$ and~$\Bm I$ respectively, then for each~$k$ the relation
 $$
 \Bm A\Bm C^{\.[k]}=\Bm I^{\.[k]} \eqmark[ACI]
 $$
-must hold, since $\Bm C$ is defined as the inverse of~$A$.  Notice that if $\Bm y$ and~$\Bm z$ are any two vectors  of length~$N-1$ such that~$y_k = 0$, and if $\Bm y^{(k)}$ and~$\Bm z^{(k)}$ are the same vectors without the $k$-th element, then
+must hold, since $\Bm C$ is defined as the inverse of~$A$.  Notice that if $\Bm y$ and~$\Bm z$ are any two vectors  of length~$N-1$ such that~$y_k = 0$, and if $\Bm y^{(k)\!}$ and~$\Bm z^{(k)\!}$ are the same vectors without the $k$-th element, then
 $$
 \Bm{Ay} = \Bm z\quad\mathbox{implies that}\quad \Bm A^{(k)}\Bm y^{(k)} = \Bm z^{(k)}.\eqmark[reduction]
 $$
@@ -73,27 +73,27 @@ and hence that $C^{[k]}_j$ would be zero also for each~$j\neq k$. Since equation
 
 It is then possible, for each index~$k\in\{1,2,\dots,N\}$, to define the vector
 $$
-\Bm b^{\lbrace k\rbrace}\coloneq \Bm α - {α_k\over C^{[k]}_k}\,\Bm C^{\.[k]},
+\Bm b^{\lbrace k\rbrace\!}\coloneq \Bm α - {α_k\over C^{[k]}_k}\,\Bm C^{\.[k]},
 $$
 which, if multiplied by~$\Bm A$, becomes
 $$
-\eqalign{\Bm A \Bm b^{\lbrace k\rbrace} &= \Bm{Aα} - {α_k\over C^{[k]}_k}\,\Bm A \Bm C^{\.[k]} = \Bm f - {α_k\over C^{[k]}_k}\,\Bm I^{\.[k]}.
+\eqalign{\Bm A \Bm b^{\lbrace k\rbrace\!} &= \Bm{Aα} - {α_k\over C^{[k]}_k}\,\Bm A \Bm C^{\.[k]} = \Bm f - {α_k\over C^{[k]}_k}\,\Bm I^{\.[k]}.
                                     \cr &= (f_1,\dots,f_{k-1},f_k-{α_k\over C^{[k]}_k}, f_{k+1},\dots,f_N)^T.}
 $$
-Since the vector~$\Bm b^{\lbrace k\rbrace}$ is such that~$b^{\lbrace k \rbrace}_k=0$, reasoning~\ref[reduction] applied to this last equation says that
+Since the vector~$\Bm b^{\lbrace k\rbrace\!}$ is such that~$b^{\lbrace k \rbrace\!}_k=0$, reasoning~\ref[reduction] applied to this last equation says that
 $$
 \Bm A\,(b^{\lbrace k\rbrace}_1,\dots,\rlap{\typoscale[1900/]\it/} b^{\lbrace k\rbrace}_k,\dots, b^{\lbrace k\rbrace}_N)^T= \Bm f\,^{(k)}.
 $$
-So, the vector that we called~$\Bm β^{\lbrace k\rbrace}$ happens to be the vector~$\Bm b^{\lbrace k\rbrace}$ without the $k$-th element, i.e.,
+So, the vector that we called~$\Bm β^{\lbrace k\rbrace\!}$ happens to be the vector~$\Bm b^{\lbrace k\rbrace\!}$ without the $k$-th element, i.e.,
 $$
-\Bm β^{\lbrace k\rbrace} = (b^{\lbrace k\rbrace}_1,\dots,\rlap{\typoscale[1900/]\it/} b^{\lbrace k\rbrace}_k,\dots, b^{\lbrace k\rbrace}_N)^T.
+\Bm β^{\lbrace k\rbrace\!} = (b^{\lbrace k\rbrace}_1,\dots,\rlap{\typoscale[1900/]\it/} b^{\lbrace k\rbrace}_k,\dots, b^{\lbrace k\rbrace}_N)^T.
 $$
 
-Finally, for each~$k$, the evaluation of~$s^{(k)}$ at the point~$x_k\in X$ can be computed in the following way,
+Finally, for each~$k$, the evaluation of~$s^{(k)\!}$ at the point~$x_k\in X$ can be computed in the following way,
 $$
-s^{(k)}(x_k) = \Bm t^{(k)}\!(x_k)^T \Bm β^{\lbrace k\rbrace} =  \Bm t(x_k)^T \Bm b^{\lbrace k\rbrace} = (\Bm A \Bm b^{\lbrace k\rbrace\!})_k = f_k-{α_k\over C^{[k]}_k},
+s^{(k)\!}(x_k) = \Bm t^{(k)\!}(x_k)^T \Bm β^{\lbrace k\rbrace\!} =  \Bm t(x_k)^T \Bm b^{\lbrace k\rbrace\!} = (\Bm A \Bm b^{\lbrace k\rbrace\!})_k = f_k-{α_k\over C^{[k]}_k},
 $$
-by reminding that~$\Bm t(x_k)^T$ is the $k$-th row of the interpolation matrix~$\Bm A$.~\QED
+by reminding that~$\Bm t(x_k)^T\!$ is the $k$-th row of the interpolation matrix~$\Bm A$.~\QED
 \postskip
 
 We are now ready to derive an alternative formula also for the previously defined vector~$\Bm U$.  The following calculations are just a continuation of the previous ones, so neither the context nor the used notations will be repeated.
@@ -103,10 +103,10 @@ $$
 U_k =  α_k\,E_k = {α_k^2\over C_{k,k}}.
 $$
 \proof
-The functions $s$ and~$s^{(k)}$ are expressed in terms of the kernel translates as
+The functions $s$ and~$s^{(k)\!}$ are expressed in terms of the kernel translates as
 $$
 \eqalign{ s(x) &= \Bm t(x)^T\Bm α \cr
-     s^{(k)}\!(x) &= \Bm t^{(k)}\!(x)^T\Bm β^{\lbrace k\rbrace}}
+     s^{(k)\!}(x) &= \Bm t^{(k)\!}(x)^T\Bm β^{\lbrace k\rbrace}}
 \quad\mathbox{for each $x\in\Omega$.}
 $$
 This means that the squares of their native space norms assume the values
@@ -122,7 +122,7 @@ $$
                       &= {α_k \over C^{[k]}_k}\,α_k = E_k\,α_k.
 }
 $$
-In the last line we used the fact that the matrix~$\Bm C$ is symmetric (because it is the inverse of the symmetric interpolation matrix~$\Bm A$) and, by definition, $\Bm{Cf} = \Bm α$.~\QED
+We also used the fact that the matrix~$\Bm C$ is symmetric (in fact, it is the inverse of the symmetric interpolation matrix~$\Bm A$) and that, by definition, $\Bm{Cf} = \Bm α$.~\QED
 
 
 
