--- a/thesis.tex
+++ b/thesis.tex
@@ -21,7 +21,7 @@
 \font\symbols=Diamond % MonotypeSorts
 \def\QED{\hbox{\symbols\resizethefont \,❖}}
 \font\boldmathfont=EBGaramond-SemiBoldItalic
-\famvardef\tt{\TypewriterMT\setff{-liga; -tlig}\typoscale[870/]\rm}
+\famvardef\tt{\TypewriterMT\setff{-liga; -tlig; embolden=1.1}\typoscale[870/]\rm}
 
 
 \margins/1 a4 (103,97,130,145)pt
