--- a/thesis-mac.tex
+++ b/thesis-mac.tex
@@ -7,8 +7,8 @@
 
 %\abovedisplayskip=.9\abovedisplayskip
 %\belowdisplayskip=.9\belowdisplayskip
-
-
+%\the\spaceskip
+%\spaceskip=.3em plus.1em minus .05em
 
 \def\theorem{\numberedpar A{\semibold\bf THEOREM}}
 \def\corollary{\numberedpar A{\semibold\bf COROLLARY}}
