--- a/thesis.tex
+++ b/thesis.tex
@@ -9,8 +9,8 @@
 \enlang
 \fontfam[TypewriterMT]
 %\fontfam[garamondgeorgd] \setff{+calt} \typosize[12.5/14.7]%\typosize[12/14.1818]
-\fontfam[GaramondMT]\let\semibold\relax \typosize[12.5/14.7]%\typosize[12/14.1818]
-%\fontfam[BaskervilleMT]\let\semibold\relax \typosize[12.4/14.6]%\typosize[11.9/14.1]
+%\fontfam[GaramondMT]\let\semibold\relax \typosize[12.5/14.7]%\typosize[12/14.1818]
+\fontfam[BaskervilleMT]\let\semibold\relax \typosize[12.4/14.6]%\typosize[11.9/14.1]
 \load[patches, garamond-math-fix, garamond-micro]
 %\OpTeX
 % We must ensure that . , ; etc are from the same font in text and math mode.
@@ -24,7 +24,7 @@
 \famvardef\tt{\TypewriterMT\setff{-liga; -tlig; embolden=1.1}\typoscale[870/]\rm}
 
 
-\margins/1 a4 (103,97,130,145)pt
+\margins/1 a4 (103,91,130,145)pt
 
 
 \parindent 1em
