--- a/biblist.bib
+++ b/biblist.bib
@@ -36,7 +36,7 @@ address = {USA}
 
 
 
-@book{stein_2009,
+@book{stein-shakarchi_2009,
  author = {Stein, Elias M. and Shakarchi, Rami},
  publisher = {Princeton University Press},
  title = {Real Analysis: Measure Theory, Integration, and Hilbert Spaces},
