--- a/optimality.tex
+++ b/optimality.tex
@@ -10,7 +10,7 @@ $$
 							     &= \sum_{k=1}^N \gamma_k (f-s_{X,f})(x_k) = 0,
 }
 $$
-because of the reproducing property of the kernel and the fact that by definition $s_{X,f}$ takes the same values of~$f$ at each data site~$x_k$. By using the concept of {\em projection} that is defined in any Hilbert space (see Stein~\cite[stein_2009]), what we have just said can be restated in the following way.
+because of the reproducing property of the kernel and the fact that by definition $s_{X,f}$ takes the same values of~$f$ at each data site~$x_k$. By using the concept of {\em projection} that is defined in any Hilbert space (see Stein and Shakarchi~\cite[stein-shakarchi_2009]), what we have just said can be restated in the following way.
 
 \preskip
 \theorem
