--- a/thesis.tex
+++ b/thesis.tex
@@ -10,8 +10,8 @@
 \fontfam[TypewriterMT]
 %\fontfam[garamondgeorgd] \setff{+calt} \typosize[12.5/14.7]%\typosize[12/14.1818]
 %\fontfam[GaramondMT]\let\semibold\relax \typosize[12.5/14.7]%\typosize[12/14.1818]
-\fontfam[BaskervilleMT]\let\semibold\relax \typosize[12.4/14.6]%\typosize[11.9/14.1]
-\load[patches, garamond-math-fix, garamond-micro]
+\fontfam[BaskervilleMT]\let\semibold\relax \typosize[12.2/14.4]%\typosize[11.9/14.1]
+\load[patches, garamond-math-fix, micro]
 %\OpTeX
 % We must ensure that . , ; etc are from the same font in text and math mode.
 
@@ -24,7 +24,7 @@
 \famvardef\tt{\TypewriterMT\setff{-liga; -tlig; embolden=1.1}\typoscale[870/]\rm}
 
 
-\margins/1 a4 (103,91,130,145)pt
+\margins/1 a4 (103,95,130,145)pt
 
 
 \parindent 1em
@@ -67,13 +67,10 @@
 \sec[buildingsec] Building a classifier
 \input building-a-classifier
 
-%\sec shape parameter
-%\sec stability and trade-off principle (Fasshauer)
-%\sec Increment of the norm
+\sec Properties of the classifier
 %\sec Gibbs and Runge phenomena
 %\sec Variably scaled kernels
 %\sec Fake nodes
-%\sec Cross validation
 %\sec Partition of unity
 
 
