--- a/adding-data.tex
+++ b/adding-data.tex
@@ -12,13 +12,17 @@ $$
 \norm{s_{X, f}}_Φ\leq\norm{s_{Y,f}}_Φ\leq\norm{f}_Φ.\eqmark[normbound]
 $$
 
-If we have a growing sequence~$\{Y_n\}_{n\in\N}$ of data sites, in the sence that
+Assuming that $\{Y_n\}_{n\in\N}$ is a growing sequence of data sites, in the sence that
 $$
 Y_1\subset Y_2\subset Y_3\subset \cdots,
 $$
-then clearly, by monotonicity, the sequence~$\{\norm{s_{Y_n,f}}_Φ\}_{n\in\N}$ of the native space norms of the associated interpolants of~$f$ is a convergent sequence, whose limit is a number less than or equal to~$\norm f_Φ$. Whether or not this limit actually equals~$\norm f_Φ$ depends on the distribution of the data sites on the domain of~$f$.
+then clearly, by monotonicity, the sequence~$\{\norm{s_{Y_n,f}}_Φ\}_{n\in\N}$ of the native space norms of the associated interpolants of~$f$ is a convergent sequence, whose limit is a number less than or equal to~$\norm f_Φ$. Whether or not this limit actually equals~$\norm f_Φ$ may depend not only on the number of data sites but also on their distribution among the domain of~$f$.
 
-At least, for the pointwise limit there are some specific results, which we have already implicitly stated in section~\ref[errorsec], talking about error estimates.  If we suppose that the domain of~$f$ satisfies an interior cone condition and the sequence~$\{Y_n\}_{n\in\N}$ of data sites grows in a way such that the fill distances~$\{h_{Y_n}\}_{n\in\N}$ converge to zero, then the sequence of interpolants~$\{s_{Y_n,f}\}_{n\in\N}$ converges uniformly to~$f$, because of theorem~\ref[errorestimate] and the bound on the power distance given in~\ref[powbound]. 
+At least for the pointwise limit there are some specific results, which we have already implicitly stated in section~\ref[errorsec], talking about error estimates.  If the domain~$Ω$ of~$f$ satisfies an interior cone condition and the sequence~$\{Y_n\}_{n\in\N}$ of data sites grows in a way such that the fill distances~$\{h_{Y_n}\}_{n\in\N}$ converge to zero, then the sequence of interpolants~$\{s_{Y_n,f}\}_{n\in\N}$ converges uniformly to~$f$, i.e.,
+$$
+\norm{\.f - s_{Y_n,f}}_\infty \coloneq \sup_{x\in Ω} |f(x)-s_{Y_n,f}(x)\!|\to 0\qquad\hbox{when $\,n\to\infty$},
+$$
+because of theorem~\ref[errorestimate] and the uniform bound on the power function given in~\ref[powbound]. 
 
 
 
@@ -116,7 +120,7 @@ The substitution of this value of~$γ$ into expression~\ref[proof**] concludes t
 \postskip
 
 
-This theorem says that if the interpolant~$s_{X,f}$ already makes a correct prediction at a given point~$x\notin X$, in the sense that $s_{X,f}(x)=f(x)$, then the addition of that point~$x$ to the data sites has no effect on the norm of the interpolant, in fact
+On the one hand this theorem says that if the interpolant~$s_{X,f}$ already makes a correct prediction at a given point~$x\notin X$, in the sense that $s_{X,f}(x)=f(x)$, then the addition of that point~$x$ to the data sites has no effect on the norm of the interpolant, in fact
 $$
 \norm{s_{X\cup\{x\},f}}_Φ^2=\norm{s_{X,f}}_Φ^2+ {(f(x) - s_{X, f}(x))^2\over P^2_X(x)}=\norm{s_{X,f}}_Φ^2.
 $$
@@ -133,16 +137,10 @@ may be large not only if the prediction is bad, but also if the value of~$P_X$ a
 Therefore, as pointed out by Lenarduzzi and Shaback~\cite[lenarduzzi-shaback_2017], computing the difference $\norm{s_{X\cup\{x\},f}}_Φ^2 -\norm{s_{X,f}}_Φ^2$ between the squares of the norms of $s_{X\cup\{x\},f}$ and~$s_{X,f}$ is a geometrically correct way of establishing the goodness of the prediction made by $s_{X,f}$ for the value of~$f$ at the point~$x$, since this quantity does not consider only the error~$f(x)-s_{X,f}(x)$, but also takes into account, through the value~$P_X(x)$, the closeness of~$x$ to the data sites~$X$. We expect in fact a much better accuracy on the prediction for~$f(x)$ at a point $x$ close to~$X$ compared to a point $x$ far from~$X$.
 
 
-If the set~$X$ of data sites is already big enough so that $s_X$ is close to~$f$ in~$\Cal N_Φ$, and hence $\norm{s_{X,f}}_Φ$ is close to~$\norm f_Φ$, then there is few margin left for a further increase of the norm of the interpolant when a new point~$x$ is added to the data sites, since \ref[normbound]~says that~$\norm{s_{X, f}}_Φ\leq\norm{s_{X\cup\{x\},f}}_Φ\leq\norm{f}_Φ.$  This last statement of course holds under the hypothesis that the sampled function~$f$ belongs to the native space of~$Φ$.  If this is not the case, then we do not have a bound on the possible increase of the norm when passing from $s_{X,f}$ to~$s_{X\cup\{x\}}$.
+If the set~$X$ of data sites is already big enough so that $s_X$ is close to~$f$ in~$\Cal N_Φ$, and hence $\norm{s_{X,f}}_Φ$ is close to~$\norm f_Φ$, then there is few margin left for a further increase of the norm of the interpolant when a new point~$x$ is added to the data sites, since \ref[normbound]~says that~$\norm{s_{X, f}}_Φ\leq\norm{s_{X\cup\{x\},f}}_Φ\leq\norm{f}_Φ.$  This last statement of course holds under the hypothesis that the sampled function~$f$ belongs to the native space of~$Φ$.  If this is not the case, then we do not have a bound on the possible increase of the norm when passing from $s_{X,f}$ to~$s_{X\cup\{x\},f}$.
 
- A case of special interest is that of a {\em discontinuous} function~$f$, which of course doesn't belong to the native space of a continuous kernel~$Φ$ (see theorem~\ref[cont-theor]). In this case the norm of the interpolant can grow very much if the newly added point $x$ is close to the singularity of~$f$, as shown in figure~\ref[growfig].  The big increment of the norm indicates that a violation of the model~$s_{X,f}$ is occurring, or in other words that the new pair of data~$(x, f(x))$ does not fit well the model~$s_{X,f}$ previously established by the pairs of data~$(X, f(X))$.
+ A case of special interest is that of a {\em discontinuous} function~$f$, which of course doesn't belong to the native space of a continuous kernel~$Φ$ (see theorem~\ref[cont-theor]). In this case the norm of the interpolant can grow very much if the newly added point $x$ is close to the singularity of~$f$.  The big increment of the norm indicates that a violation of the model~$s_{X,f}$ is occurring, or in other words that the new pair of data~$(x, f(x))$ does not fit well the model~$s_{X,f}$ previously established by the pairs of data~$(X, f(X))$.
 
-\label[growfig]
-\topinsert
-\centerline{\frame{\figureproof{1in}{.9\hsize}}}
-\cskip
-\caption/f
-\endinsert
 
 % TODO: the norm of the interpolating converges, but not necessarily to the norm of the function.  Example of this.   The location/distribution of the data sites is important.  Results for pointwise convergence.
 
