--- a/the-interpolation-problem.tex
+++ b/the-interpolation-problem.tex
@@ -71,7 +71,7 @@ This approach, in fact, consists in taking a space~$\Cal S$ with dimension $M< N
 The main advantage of the least squares approximation method over the standard interpolation method is the fact that the former leads to a linear system of fewer equations than the latter, reducing the computational cost.  In the following we won’t pursue the least square method, but instead consider always only the exact interpolating conditions~\ref[intcond].  More about the topic of least squares approximation can be found in Fasshauer~\cite[fasshauer_2007].
 
 
-At this point, after having characterized the spaces~$\Cal S$ suitable for the interpolation problem on a fixed data set~$X$, one may wonder if it is possible to build a space of functions which can be used to interpolate function values on an arbitrary data set~$X$.   Of course, for what we said about the dimension of an interpolating space~$\Cal S$ for a fixed~$X$, we can only aim at finding spaces suitable for interpolation on all data sets~$X$ of a fixed size~$N$---otherwise $\Cal S$ would be required to have multiple dimensions, which is not possible.  A space of this kind, i.e., an $N$-dimensional linear space~$\cal S$ of real-valued functions, defined on a domain~$\Omega$ (which contains at least $N$ points), that is nondegenerate for each set~$X=\{\range x_N/\}\subset\Omega$ of $N$ distinct points, is called a {\em Haar space} of dimension~$N$ on~$\Omega$.  We have already seen an example of Haar space, at least in the monodimensional case, namely the space of polynomial functions~$\Cal P_{N-1}$ of degree strictly less than~$N$ (example~\ref[poly]).  Do Haar spaces exist also in higher dimensions?  The answer is given by the following result.
+At this point, after having characterized the spaces~$\Cal S$ suitable for the interpolation problem on a fixed data set~$X$, one may wonder if it is possible to build a space of functions which can be used to interpolate function values on every given data set~$X$.   Of course, for what we said about the dimension of an interpolating space~$\Cal S$ for a fixed~$X$, we can only aim at finding spaces suitable for interpolation on all data sets~$X$ of a fixed size~$N$---otherwise $\Cal S$ would be required to have multiple dimensions, which is not possible.  A space of this kind, i.e., an $N$-dimensional linear space~$\cal S$ of real-valued functions, defined on a domain~$\Omega$ (which contains at least $N$ points), that is nondegenerate for each set~$X=\{\range x_N/\}\subset\Omega$ of $N$ distinct points, is called a {\em Haar space} of dimension~$N$ on~$\Omega$.  We have already seen an example of Haar space, at least in the monodimensional case, namely the space of polynomial functions~$\Cal P_{N-1}$ of degree strictly less than~$N$ (example~\ref[poly]).  Do Haar spaces exist also in higher dimensions?  The answer is given by the following result.
 
 \preskip
 \label[mcth]
