--- a/building-a-classifier.tex
+++ b/building-a-classifier.tex
@@ -2,19 +2,19 @@
 The ideas developed in the previous section can be used to try and distinguish samples that come from a regular function from those that come from a discontinuous function.  The {\Red discontinuity estimator/indicator/classifier} that we are going to define will be the main toll necessary to later develop an algorithm for the interpolation of a discontinuous function.
 
 
-In what follows, we will always assume that  the kernel~$Φ$ is radial, i.e., of the form~\ref[phi] for some univariate positive definite function~$\phi$. Let $X=\{\range x_N/\}$ be a set of data sites and $f$ a function that is no more assumed to belong to the native space of~$Φ$.  Suppose that $f$ has been sampled at~$X$ and the sampling is dense enough to catch the relevant features of~$f$ on its considered domain.  Our goal is to recognise whether or not $f$ is discontinuous just by looking at~$X$ and the corresponding sampled function values~$f(X)$.
+In what follows, even if not always strictly necessary, we will assume that  the kernel~$Φ$ is radial, i.e., of the form~\ref[phi] for some univariate positive definite function~$\phi$.  This applies also to the notations, with the letter~$\phi$ replacing the uppercase letter~$Φ$.  Let $X=\{\range x_N/\}$ be a set of data sites and $f$ a function that is no more assumed to belong to the native space of~$\phi$.  Suppose that $f$ has been sampled at~$X$ and the sampling is dense enough to catch the relevant features of~$f$ on its considered domain.  Our goal is to recognise whether or not $f$ is discontinuous just by looking at~$X$ and the corresponding sampled function values~$f(X)$.
 
 
 
 Each index~$k\in\{1,2,\dots,N\}$ determines a splitting of the data sites into two parts, which are~$X\setminus\{x_k\}$ and~$\{x_k\}$. To simplify the notation, in this context we let
 $$
-X^{(k)}\coloneq X\setminus\{x_k\},\quad s\coloneq s_{X,f}\quad\mathbox{and}\quad s^{(k)}\coloneq s_{X\setminus\{x_k\},f}.
+X^{(k)\!}\coloneq X\setminus\{x_k\},\quad s\coloneq s_{X,f}\quad\mathbox{and}\quad s^{(k)\!}\coloneq s_{X^{(k)\!},f}.
 $$
-If the function~$f$ that generated the given sampling~$f(X)$ is a well behaved function, then we should expect that, for each~$k$, the interpolant~$s^{(k)}\!$ predicts quite accurately the value~$f(x_k)$ at the point~$x_k$; instead, if $f$ is a discontinuous function, then there should be some indices~$k$ such that the prediction made by~$s^{(k)}\!$ for the point~$x_k$ is wrong.  Following the considerations of the previous section, we shall consider the quantity
+If the function~$f$ that generated the given sampling~$f(X)$ is a well behaved function, then we should expect that, for each~$k$, the interpolant~$s^{(k)}\!$ predicts quite accurately the value~$f(x_k)$ at the point~$x_k$; instead, if $f$ is a discontinuous function, then there should be some indices~$k$ such that the prediction made by~$s^{(k)}\!$ for the point~$x_k$ is wrong.  Following the considerations of the previous section, we shall consider, for each~$k$, the quantity
 $$
-U_k\coloneq\norm s_Φ^2-\norm{s^{(k)}}^2_Φ = {(f_k-s^{(k)\!}(x_k))^2\over P_{X^{(k)\!}}^2(x_k)},
+U_k\coloneq\norm s_\phi^2-\norm{s^{(k)\!}}^2_\phi = {(f_k-s^{(k)\!}(x_k))^2\over P_{X^{(k)\!}}^2(x_k)},
 $$
-which is small when the data~$(x_k, f(x_k))$ follows the model~$s$ which has been trained\fnote{Using the language of machine learning, in this case $(X^{(k)\!}, f(X^{(k)\!\.}))$ is the {\em training set}, while $(x_k, f(x_k))$ is the {\em test set}.} with~$(X^{(k)}, f(X^{(k)}))$,  and it is large otherwise.
+which is small when the data~$(x_k, f(x_k))$ follows the model~$s$, which has been trained\fnote{Using the language of machine learning, in this case $(X^{(k)\!}, f(X^{(k)\!\.}))$ is the {\em training set}, while $(x_k, f(x_k))$ is the {\em test set}.} with~$(X^{(k)}, f(X^{(k)}))$,  and it is large otherwise.
 
 It is of our interested to compute the vector
 $$
@@ -24,7 +24,7 @@ which collects together all the quantities~$U_k$ that have just been defined.  T
 $$
 \Bm E\coloneq (\range E_N/),
 $$
-whose elements are defined as~$E_k\coloneq f(x_k)-s^{(k)\!}(x_k)$, and which is typically used to find the appropriate shape parameter~$ε$ for the interpolation with  a positive definite radial function~$\phi_ε$. The value of~$ε$ is chosen such that the $p$-norm
+whose elements are defined as~$E_k\coloneq f(x_k)-s^{(k)\!}(x_k)$, and which is typically used to find the appropriate shape parameter~$ε$ for the interpolation with  a positive definite radial function~$\phi_ε$ as defined in~\ref[phiepsilon]. The value of~$ε$ is chosen such that the $p$-norm
 $$
 \norm{\Bm E}_p\coloneq\cases{\bigl(\sum_{j=1}^N |x_j|^p\bigr)^{1/p}, &\quad if $p\geq1$\cr
   \max_{j\in\{1,2,\dots,N\}}|x_j|, &\quad if $p=\infty$}
@@ -36,7 +36,7 @@ The cross-validation vector~$\Bm E$ wouldn't be of much practical utility if the
 
 \preskip
 \theorem[(Rippa)]
-Let $X=\{\range x_N/\}$ be a set of data sites, $Φ:\,\Omega\times\Omega\to\R$ a symmetric positive definite kernel, and
+Let $X=\{\range x_N/\}\subset\Omega\subseteq\R^d$ be a set of data sites, $\phi:[0,\infty)\to\R$ a radial kernel which is positive definite on~$\R^d$, and
 $$
 \Bm f\coloneq (\range f_N/)^T = (f(x_1), f(x_2),\dots f(x_N))^T
 $$
@@ -45,13 +45,13 @@ Then the elements~$E_k=f_k-s^{(k)\!}(x_k)$ of the cross-validation vector~$\Bm E
 $$
 E_k = {α_k\over C_{k,k}},
 $$
-where $\Bm C$ is the inverse of the interpolation matrix~$\Bm A=\Bm A_{Φ,X}$ associated to the kernel~$Φ$ and the set~$X$ of locations, and $\Bm α$ is the vector of coefficients of the unique function~$s\in\Cal S_{Φ,X}$ that interpolates $f$ on~$X$, that is the solution of the linear sistem~$\Bm{Aα} = \Bm f$. 
+where $\Bm C$ is the inverse of the interpolation matrix~$\Bm A=\Bm A_{\phi,X}$ associated to the kernel~$\phi$ and the set~$X$ of locations, and $\Bm α$ is the vector of coefficients of the unique function~$s\in\Cal S_{\phi,X}$ that interpolates $f$ on~$X$, that is the solution of the linear sistem~$\Bm{Aα} = \Bm f$. 
 \proof
-For each point~$x\in\Omega$ let $\Bm t(x)$ be the evaluation at~$x$ of the vector of kernel translates centred at the points of~$X$, that we already defined in section~\ref[errorsec], namely,
+For each point~$x\in\Omega$ let $\Bm t(x)$ be the evaluation at~$x$ of the vector of kernel translates centred at the points of~$X$, that we already defined in section~\ref[errorsec], namely
 $$
-\Bm t(x)\coloneq (Φ(x,x_1), Φ(x,x_2), \dots, Φ(x, x_N))^T.
+\Bm t(x)\coloneq (\phi(\norm{x-x_1}), \phi(\norm{x-x_2}), \dots, \phi(\norm{x-x_N}))^T.
 $$
-Define then, for each~$k\in\{1,2,\dots, N\}$, the vectors $\Bm t^{(k)\!}(x)$ and~$\Bm f\,^{(k)\!}$ of length~$N-1$ by removing the $k$-th element from the vectors $\Bm t(x)$ and~$\Bm f$ respectively.  Similarly, define the matrix~$\Bm A^{(k)\!}$ of size~$(N-1)\times(N-1)$ by removing from~$\Bm A$ both its $k$-th~row and $k$-th~column.  If $\Bm β^{\lbrace k\rbrace\!}$ is the solution of the linear system~$\Bm A^{(k)}\Bm β^{\lbrace k\rbrace\!} = \Bm f\,^{(k)\!}$, then the function~$s^{(k)\!}\in \Cal S_{Φ,X^{(k)}}$ that interpolates~$f$ on the restricted set~$X^{(k)\!}$ of data sites can be expressed as
+Define then, for each~$k\in\{1,2,\dots, N\}$, the vectors $\Bm t^{(k)\!}(x)$ and~$\Bm f\,^{(k)\!\!}$ of length~$N-1$ by removing the $k$-th element from the vectors $\Bm t(x)$ and~$\Bm f$ respectively.  Similarly, define the matrix~$\Bm A^{(k)\!\!}$ of size~$(N-1)\times(N-1)$ by removing from~$\Bm A$ both its $k$-th~row and $k$-th~column.  If $\Bm β^{\lbrace k\rbrace\!}$ is the solution of the linear system~$\Bm A^{(k)}\Bm β^{\lbrace k\rbrace\!} = \Bm f\,^{(k)\!}$, then the function~$s^{(k)\!}\in \Cal S_{\phi,X^{(k)\!}}$ that interpolates~$f$ on the restricted set~$X^{(k)\!}$ of data sites can be expressed as
 $$
 s^{(k)\!}(x) = \Bm t^{(k)\!}(x)^T \Bm β^{\lbrace k\rbrace},\quad x\in\Omega.
 $$
@@ -60,7 +60,7 @@ If $\Bm C^{\.[k]}$ and~$\Bm I^{\.[k]}$ denote the $k$-th columns of the matrices
 $$
 \Bm A\Bm C^{\.[k]}=\Bm I^{\.[k]} \eqmark[ACI]
 $$
-must hold, since $\Bm C$ is defined as the inverse of~$A$.  Notice that if $\Bm y$ and~$\Bm z$ are any two vectors  of length~$N-1$ such that~$y_k = 0$, and if $\Bm y^{(k)\!}$ and~$\Bm z^{(k)\!}$ are the same vectors without the $k$-th element, then
+must hold, since $\Bm C$ is defined as the inverse of~$\Bm A$.  Notice that if $\Bm y$ and~$\Bm z$ are any two vectors  of length~$N-1$ such that~$y_k = 0$, and if $\Bm y^{(k)\!}$ and~$\Bm z^{(k)\!}$ are the same vectors without the $k$-th element, then
 $$
 \Bm{Ay} = \Bm z\quad\mathbox{implies that}\quad \Bm A^{(k)}\Bm y^{(k)} = \Bm z^{(k)}.\eqmark[reduction]
 $$
@@ -98,7 +98,7 @@ by reminding that~$\Bm t(x_k)^T\!$ is the $k$-th row of the interpolation matrix
 
 We are now ready to derive an alternative formula also for the previously defined vector~$\Bm U$.  The following calculations are just a continuation of the previous ones, so neither the context nor the used notations will be repeated.
 \corollary
-The elements~$U_k = \norm{s}_Φ^2-\norm{s^{(k)}}_Φ^2$ of the vector~$\Bm U$ can be computed also with the formula
+The elements~$U_k = \norm{s}_\phi^2-\norm{s^{(k)\!}}_\phi^2$ of the vector~$\Bm U$ can be computed also with the formula
 $$
 U_k =  α_k\,E_k = {α_k^2\over C_{k,k}}.
 $$
@@ -111,13 +111,13 @@ $$
 $$
 This means that the squares of their native space norms assume the values
 $$
-\eqalign{\norm{s}_Φ^2 &= \Bm α^T\! \Bm A\, \Bm α = \Bm α^T\Bm f \cr
-    \norm{s^{(k)\!}}_Φ^2 &= (\.\Bm β^{\lbrace k\rbrace\!})^T\! \Bm A^{(k)}\, \Bm β^{\lbrace k\rbrace} = (\.\Bm β^{\lbrace k\rbrace\!})^T \Bm f\,^{(k)} = (\Bm b^{\lbrace k\rbrace\!})^T \Bm f.
+\eqalign{\norm{s}_\phi^2 &= \Bm α^T\! \Bm A\, \Bm α = \Bm α^T\Bm f \cr
+    \norm{s^{(k)\!}}_\phi^2 &= (\.\Bm β^{\lbrace k\rbrace\!})^T\! \Bm A^{(k)}\, \Bm β^{\lbrace k\rbrace} = (\.\Bm β^{\lbrace k\rbrace\!})^T \Bm f\,^{(k)} = (\Bm b^{\lbrace k\rbrace\!})^T \Bm f.
 }
 $$
 By remembering how~$\Bm β^{\lbrace k\rbrace}$ was defined, their difference evaluates to
 $$
-\eqalign{\norm{s}_Φ^2 -  \norm{s^{(k)\!}}_Φ^2 &= \Bm α^T\Bm f - (\Bm b^{\lbrace k\rbrace\!})^T \Bm f   = (\Bm α - \Bm b^{\lbrace k\rbrace\!})^T \Bm f \cr
+\eqalign{\norm{s}_\phi^2 -  \norm{s^{(k)\!}}_\phi^2 &= \Bm α^T\Bm f - (\Bm b^{\lbrace k\rbrace\!})^T \Bm f   = (\Bm α - \Bm b^{\lbrace k\rbrace\!})^T \Bm f \cr
                       &= \biggl({α_k \over C^{[k]}_k}\,\Bm C^{\.[k]}\biggr)^T\Bm f ={α_k \over C^{[k]}_k}(\Bm C^{\.[k]})^T\Bm f \cr
                       &= {α_k \over C^{[k]}_k}\,α_k = E_k\,α_k.
 }
@@ -132,7 +132,7 @@ We also used the fact that the matrix~$\Bm C$ is symmetric (in fact, it is the i
 %Given the hdfh  return the variables jdjdjd which denotes respectively
 
 It is clear that the computational complexity of the vector~$\Bm U$ and the vector~$\Bm E$ are similar---both vectors can be computed in time~$O(N^3)$, where $N$~is the number of data sites. 
-Just to give a concrete example how to actually implement these calculations on a calculator, we present in sequence two MATLAB codes that allow to symultaneously compute both $\Bm E$ and~$\Bm U$, starting from the interpolation matrix~$\Bm A$ and the vector~$\Bm f$ of function values. As a side effect, these codes compute also the matrix~$\Bm C$, the vector of coefficients~$\Bm α$ and the square of the native space norm of~$s$.
+Just to give a concrete example how to actually implement these calculations on a calculator, we present in sequence two MATLAB codes that allow to simultaneously compute both $\Bm E$ and~$\Bm U$, starting from the interpolation matrix~$\Bm A$ and the vector~$\Bm f$ of function values. As a side effect, these codes compute also the matrix~$\Bm C$, the vector of coefficients~$\Bm α$ and the square of the native space norm of~$s$.
 The first code uses the standard MATLAB linear system solver (the backslash operator); the second one instead finds the solution of the linear system by first computing the inverse of~$\Bm A$ using the {\tt pinv} algorithm, which provides maximal stability by sacrificing speed---this is what Fassauer~\cite[fasshauer_2007]~does when he computes the cross validation vector~$\Bm E$.
 
 \ttline=-2 % no line numbering
