Unnecessary semibold removed

--- a/positive-definite-functions.tex
+++ b/positive-definite-functions.tex
@@ -144,7 +144,7 @@ We report in table~\ref[wentab], up to positive constant factors, the functions 
 
 \label[wentab]
 \topinsert
-\centerline{\semibold\bf Wendland’s functions}
+\centerline{\bf Wendland’s functions}
 \smallskip
 \centerline{%
 \table{ccc}{       					                                \crl
