--- a/thesis.tex
+++ b/thesis.tex
@@ -8,15 +8,11 @@
 
 \enlang
 \fontfam[TypewriterMT]
-%\fontfam[garamondgeorgd] \setff{+calt} \typosize[12.5/14.7]%\typosize[12/14.1818]
-%\fontfam[GaramondMT]\let\semibold\relax \typosize[12.5/14.7]%\typosize[12/14.1818]
-\fontfam[BaskervilleMT]\let\semibold\relax \typosize[12.2/14.42]%\typosize[11.9/14.1]
+\fontfam[BaskervilleMT]
+\typosize[12.2/14.42]
 \load[patches, garamond-math-fix, micro]
 %\OpTeX
 % We must ensure that . , ; etc are from the same font in text and math mode.
-
-%\setmathsizes[10/10/10]
-
 
 \font\symbols=Diamond % MonotypeSorts
 \def\QED{\hbox{\symbols\resizethefont \,❖}}
